--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SPOTIFY_CLIENT_ID=62e74606d6a84c92998a96933c0b6d93
-SPOTIFY_CLIENT_SECRET=082b672e56cb4782b45a52acd75dccdd
-SPOTIFY_REDIRECT_URI=http://localhost:8888/callback
+SPOTIFY_CLIENT_SECRET=130b25b96e564262a44164ab1d5a5b17
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:3000/callback
